--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Techtábor bookmark",
-  "description": "This extension will lead you directly to Techtabor website",
+  "name": "Test",
+  "description": "It's a test extension.",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
@@ -8,5 +8,11 @@
   },
   "action": {
     "default_icon": "icon_128.png"
-  }
+  },
+  "permissions": [
+    "activeTab",
+    "alarms",
+    "tabs",
+    "webRequest"
+  ]
 }
