--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Test",
+  "name": "Spoiler Alert",
   "description": "It's a test extension.",
   "version": "1.0",
   "manifest_version": 3,
