--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "Spoiler Alert",
-  "description": "It's a test extension.",
-  "version": "1.0",
-  "manifest_version": 3,
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_icon": "icon_128.png"
-  },
-  "permissions": [
-    "activeTab",
-    "alarms",
-    "tabs",
-    "webRequest",
-    "scripting"
-  ]
+    "name": "Spoiler Defender",
+    "description": "This extension defends you from Spoilers.",
+    "version": "1.0",
+    "manifest_version": 3,
+    "background": {
+        "service_worker": "background.js"
+    },
+    "action": {
+        "default_icon": "icon_128.png"
+    },
+    "permissions": [
+        "activeTab",
+        "alarms",
+        "tabs",
+        "webRequest",
+        "scripting"
+    ]
 }
